--- a/config/galaxy.ini
+++ b/config/galaxy.ini
@@ -663,7 +663,7 @@ use_printdebug = True
 
 # Enable live debugging in your browser.  This should NEVER be enabled on a
 # public site.  Enabled in the sample config for development.
-use_interactive = True
+use_interactive = False
 
 # Write thread status periodically to 'heartbeat.log',  (careful, uses disk
 # space rapidly!).  Useful to determine why your processes may be consuming a
@@ -770,7 +770,7 @@ id_secret = 955da8cf9685007b4b6ac5151a92745d
 # of the server, and will have access to create users, groups, roles,
 # libraries, and more.  For more information, see:
 #   https://wiki.galaxyproject.org/Admin/Interface
-admin_users = suderman@cs.vassar.edu
+admin_users = marc@cs.brandeis.edu
 
 # Force everyone to log in (disable anonymous access).
 #require_login = False
